--- a/MeetingSchedule/nbproject/project.properties
+++ b/MeetingSchedule/nbproject/project.properties
@@ -29,11 +29,13 @@ dist.jar=${dist.dir}/MeetingScheduleGUI.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.DateChooser.jar=DateChooser.jar
 file.reference.mysql-connector-java-5.1.45-bin.jar=mysql-connector-java-5.1.45-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.45-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.45-bin.jar}:\
+    ${file.reference.DateChooser.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
