--- a/MeetingSchedule/nbproject/project.properties
+++ b/MeetingSchedule/nbproject/project.properties
@@ -30,12 +30,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.DateChooser.jar=DateChooser.jar
+file.reference.jcalendar-1.4.jar=jcalendar-1.4.jar
 file.reference.mysql-connector-java-5.1.45-bin.jar=mysql-connector-java-5.1.45-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.45-bin.jar}:\
-    ${file.reference.DateChooser.jar}
+    ${file.reference.DateChooser.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -60,7 +62,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=MeetingSchedule.Controller
+main.class=MeetingSchedule.Login
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
